<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">GhostTalk</string>
    <string name="settings">Settings</string>
    <string name="add_a_friend">Add a friend</string>
    <string name="delimiter">/</string>
    <string name="chats">Chats</string>
    <string name="log_in">log in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="nickname">Nickname</string>
    <string name="you_do_not_have_any_chats_yet">You don\'t have any chats yet</string>
    <string name="you_do_not_have_any_calls_yet">You don\'t have any calls yet</string>
    <string name="or">or</string>
    <string name="edit_phone_number">Edit phone number</string>
    <string name="account">Account</string>
    <string name="new_name">New name</string>
    <string name="new_phone_number">New phone number</string>
    <string name="new_password">New password</string>
    <string name="new_nickname">New nickname</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="select_image">Select Image</string>
    <string name="profile_image">Profile image</string>
    <string name="sign_out">Sign Out</string>
    <string name="you_sure_you_want_to_sign_out">You sure you want to sign out?</string>
    <string name="yes_i_am_sure">Yes, i am sure</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="new_bio">New bio</string>
    <string name="profile_photo_updated_successfully">Profile photo updated successfully</string>
    <string name="name_updated_successfully">Name updated successfully (Reload app)</string>
    <string name="bio_updated_successfully">Bio updated successfully</string>
    <string name="channel_about_updated_successfully">Channel about updated successfully (Reload app)</string>
    <string name="channel_nickname_is_not_changeable">Channel nickname isn\'t changeable</string>
    <string name="nickname_updated_successfully">Nickname updated successfully</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="archive_password_updated_successfully">Archive password updated successfully</string>
    <string name="bio_can_not_be_empty">Bio can\'t be empty</string>
    <string name="message">Message</string>
    <string name="no_friends_available">No friends available</string>
    <string name="no_messages_here_yet">No messages here yet…</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create">Create</string>
    <string name="add_image_profile">Add profile image</string>
    <string name="back_to_login">Back to Log In</string>
    <string name="remember_recovery_code">Remember this code, you need it to recover your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="recovery_code">Recovery code</string>
    <string name="password_recovery">Password recovery</string>
    <string name="recovery_code_can_not_be_empty">Recovery code can\'t be empty</string>
    <string name="online">Online</string>
    <string name="info">Info</string>
    <string name="find">Find</string>
    <string name="please_enter_the_nickname_of_the_person_you_want_to_find">Please enter the nickname of the person you want to find</string>
    <string name="status">Status</string>
    <string name="offline">Offline</string>
    <string name="recovery_code_must_contain_8_digits">Recovery code must contain 8 digits</string>
    <string name="this_nickname_is_already_linked_to_the_account">This nickname is already linked. Please choose another</string>
    <string name="this_channel_tag_is_already_linked_to_the_account">This channel tag is already linked. Please choose another</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="channel_about_is_too_long">About channel is too long</string>
    <string name="phone_is_too_short">Phone number is too short</string>
    <string name="passwords_must_match">Passwords must match</string>
    <string name="nickname_can_not_be_empty">Nickname can\'t be empty</string>
    <string name="channel_tag_can_not_be_empty">Channel tag can\'t be empty</string>
    <string name="name_can_not_be_empty">Name can\'t be empty</string>
    <string name="channel_name_can_not_be_empty">Channel name can\'t be empty</string>
    <string name="password_can_not_be_empty">Password can\'t be empty</string>
    <string name="channel_about_can_not_be_empty">About channel can\'t be empty</string>
    <string name="phone_can_not_be_empty">Phone number can\'t be empty</string>
    <string name="nickname_must_be_in_lower_case">Nickname must be in lower case</string>
    <string name="nickname_must_be_without_spaces">Nickname must be without spaces</string>
    <string name="channel_tag_must_be_in_lower_case">Channel tag must be in lower case</string>
    <string name="channel_tag_must_be_without_spaces">Channel tag must be without spaces</string>
    <string name="you_cannot_use_your_password_again_choose_a_different_one">You cannot use your password again. Choose a different one</string>
    <string name="incorrect_password">Incorrect password. Please try again</string>
    <string name="error">Something went wrong. Please try again</string>
    <string name="we_could_not_find_this_account">We couldn\'t find this account. Please try again.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_chat">Find Chat</string>
    <string name="please_enter_the_nickname_of_the_chat_you_want_to_find">Please enter the Nickname of the chat you want to find</string>
    <string name="find_a_chat">Find a chat</string>
    <string name="please_enter_the_nickname_of_chat">Please enter the nickname of user</string>
    <string name="No_admin_chanel_message">You cannot send messages because you are not an admin</string>
    <string name="ban_user">Sending messages is limited</string>
    <string name="select_an_action">Select an action</string>
    <string name="delete_a_chat">Delete a chat</string>
    <string name="to_the_archive">Add to the archive</string>
    <string name="off_archive">Extract from the archive</string>
    <string name="archived_chats">Archived Chats</string>
    <string name="open_archive">Archive</string>
    <string name="from_the_archive">From the archive</string>
    <string name="you_don_t_have_any_archived_chats_yet">You don\'t have any archived chats yet</string>
    <string name="archive_password">Archive password</string>
    <string name="phone_number">Phone number</string>
    <string name="new_archive_password">New archive password</string>
    <string name="enter_archive_password">Enter archive password</string>
    <string name="set_phone_number">Set phone number</string>
    <string name="phone_number_text">Phone number</string>
    <string name="code_from_sms">Code from SMS</string>
    <string name="your_contacts_which_are_registered_in_ghosttalk">Your contacts which are registered in GhostTalk</string>
    <string name="contacts">Contacts</string>
    <string name="you_don_t_have_any_channels_yet">You don\'t have any channels yet</string>
    <string name="channels">Channels</string>
    <string name="channels_list">Channels list</string>
    <string name="create_new_channel">Create new channel</string>
    <string name="add_channel_image">Add channel image</string>
    <string name="channel_tag">Channel Tag</string>
    <string name="about_channel">About Channel</string>
    <string name="channel_name">Channel name</string>
    <string name="leave_channel">Leave channel</string>
    <string name="join_channel">Join channel</string>
    <string name="channel_settings">Channel settings</string>
    <string name="find_a_channel">Find a channel</string>
    <string name="please_enter_the_nickname_of_channel">Please enter the nickname of channel</string>
    <string name="new_about_channel">New about channel</string>
    <string name="about_ghost_talf">About GhostTalk</string>
    <string name="new_channel_name">New channel name</string>
    <string name="subscribers">Subscribers</string>
    <string name="admins">Admins</string>
    <string name="list_of_subscribers">List of subscribers</string>
    <string name="error_phone">First, you need enter your phone number in the settings</string>
    <string name="image_wather">Image watcher</string>
    <string name="null_internet">No internet connection</string>
    <string name="ok">Ok</string>
</resources>