<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:clipToPadding="false"
    android:fillViewport="true"
    tools:context=".fragments.SignUpFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/signUpFragmentHeader"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="@color/background">
            <TextView
                style="@style/title_fragment"
                android:id="@+id/signUpFragmentTitle"
                android:text="@string/create_new_account" />
        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/signUpFragmentImageProfileLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/marginTop_normal"
            android:layout_below="@id/signUpFragmentHeader">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/signUpFragmentImageProfile"
                android:layout_width="@dimen/profileImage_size"
                android:layout_height="@dimen/profileImage_size"
                android:background="@drawable/background"
                android:scaleType="centerCrop"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/signUpFragmentImageProfileHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/moscowsansregular"
                android:text="@string/add_image_profile"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/textSize_small"
                android:textStyle="bold" />
        </RelativeLayout>

        <EditText
            style="@style/edit_text"
            android:id="@+id/signUpFragmentName"
            android:layout_below="@id/signUpFragmentImageProfileLayout"
            android:hint="@string/name" />

        <EditText
            style="@style/edit_text"
            android:id="@+id/signUpFragmentUsername"
            android:layout_below="@id/signUpFragmentName"
            android:hint="@string/nickname"/>

        <EditText
            style="@style/edit_text"
            android:id="@+id/signUpFragmentPassword"
            android:background="@drawable/background_edit"
            android:layout_below="@id/signUpFragmentUsername"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <EditText
            style="@style/edit_text"
            android:id="@+id/signUpFragmentConfirmPassword"
            android:layout_below="@id/signUpFragmentPassword"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/signUpFragmentButtonCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUpFragmentConfirmPassword"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/marginTop_large"
            android:backgroundTint="@color/orange"
            android:src="@drawable/check_ui"
            app:borderWidth="@dimen/borderWidth"
            app:elevation="@dimen/elevation"
            app:rippleColor="@color/background"
            app:tint="@color/background"
            android:layout_marginEnd="@dimen/marginEnd_normal"/>
        <TextView
            android:fontFamily="@font/moscowsansregular"
            android:id="@+id/logInFragmentButtonBackToLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/marginBottom_normal"
            android:text="@string/back_to_login"
            android:textColor="@color/orange"
            android:textSize="@dimen/textSize_normal"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>