<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/showDialogImageCardView"
        android:layout_width="@dimen/very_big"
        android:layout_height="@dimen/very_big"
        app:cardCornerRadius="@dimen/corner_radius"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/showDialogImageTitle"
                    style="@style/title_fragment"
                    android:gravity="center"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/profile_image"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/showDialogImageButtonCamera"
                    android:layout_width="200dp"
                    style="@style/orange_button"
                    android:layout_below="@id/showDialogImageTitle"
                    android:layout_marginTop="@dimen/normal"
                    android:background="@drawable/orange_button_ux"
                    android:text="@string/camera" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/showDialogImageButtonGallery"
                    android:layout_width="200dp"
                    style="@style/orange_button"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/showDialogImageButtonCamera"
                    android:background="@drawable/orange_button_ux"
                    android:text="@string/gallery" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>