<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".fragments.ForgotPasswordFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragmentForgotPasswordHeader"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/background">

        <ImageView
            android:id="@+id/fragmentForgotPasswordButtonBack"
            android:layout_width="@dimen/buttons_size"
            android:layout_height="@dimen/buttons_size"
            android:src="@drawable/back_ui" />

        <TextView
            style="@style/title_fragment"
            android:id="@+id/fragmentForgotPasswordTitle"
            android:text="@string/password_recovery"/>
    </androidx.appcompat.widget.Toolbar>

    <EditText
        style="@style/edit_text"
        android:id="@+id/fragmentForgotPasswordUsername"
        android:layout_below="@id/fragmentForgotPasswordHeader"
        android:hint="@string/nickname"
        android:inputType="text" />

    <EditText
        style="@style/edit_text"
        android:id="@+id/fragmentForgotPasswordRecoveryCode"
        android:layout_below="@id/fragmentForgotPasswordUsername"
        android:hint="@string/recovery_code"
        android:imeOptions="actionDone"
        android:inputType="numberPassword"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragmentForgotPasswordButtonCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragmentForgotPasswordRecoveryCode"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/large"
        android:layout_marginEnd="@dimen/normal"
        android:backgroundTint="@color/orange"
        android:src="@drawable/check_ui"
        app:borderWidth="@dimen/null_dimen"
        app:elevation="@dimen/null_dimen"
        app:rippleColor="@color/background"
        app:tint="@color/background" />
</RelativeLayout>