<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.AddFriendActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/findChatActivityHeader"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/background">

        <ImageView
            android:id="@+id/findChatActivityButtonBack"
            android:layout_width="@dimen/buttons_size"
            android:layout_height="@dimen/buttons_size"
            android:src="@drawable/back_ui" />

        <TextView
            style="@style/title_fragment"
            android:text="@string/find_a_channel" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        style="@style/edit_text"
        android:id="@+id/findChatActivityUsername"
        android:layout_below="@id/findChatActivityHeader" />
    <TextView
        style="@style/text_hint"
        android:id="@+id/findChatActivityPhoneNumberHelp"
        android:layout_below="@id/findChatActivityUsername"
        android:layout_centerHorizontal="true"
        android:text="@string/please_enter_the_nickname_of_channel"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/orange_button"
        android:background="@drawable/orange_button_ux"
        android:id="@+id/findChatActivityButtonFind"
        android:layout_marginTop="20dp"
        android:layout_below="@id/findChatActivityPhoneNumberHelp"
        android:text="@string/find" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/findChatActivityRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/findChatActivityButtonFind"
        android:layout_marginTop="@dimen/small"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
</RelativeLayout>