<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".fragments.LogInFragment">
    <TextView
        android:layout_gravity="center|top"
        android:id="@+id/logInFragmentTitle"
        style="@style/title_fragment"
        android:textSize="20sp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/log_in" />



    <EditText
        android:layout_gravity="center"
        android:layout_marginBottom="45dp"
        android:textSize="14sp"
        style="@style/edit_text"
        android:id="@+id/logInFragmentUsername"
        android:hint="@string/nickname"
        android:textColorHint="@color/text_hint"
        android:textColor="@color/text_color" />

    <EditText
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textSize="14sp"
        style="@style/edit_text"
        android:id="@+id/logInFragmentPassword"
        android:hint="@string/password"
        android:textColorHint="@color/text_hint"
        android:inputType="textPassword" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/logInFragmentButtonCheck"
        android:layout_gravity="bottom|center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:backgroundTint="@color/orange"
        android:src="@drawable/check_ui"
        app:borderWidth="@dimen/null_dimen"
        app:elevation="@dimen/null_dimen"
        app:rippleColor="@color/background"
        app:tint="@color/background" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/logInFragmentButtonForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="."
        android:layout_marginTop="@dimen/small"
        android:textColor="@color/orange"
        android:textSize="@dimen/textSize_small"
        android:textStyle="bold" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/logInFragmentButtonCreateNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal"
        android:text="."
        android:textColor="@color/orange"
        android:textSize="@dimen/textSize_normal"
        android:textStyle="bold" />

</FrameLayout>